# OTUS-cpp

./: .travis.yml  Doxyfile
Homework10/: Bulk.cpp  Bulk.h  CMakeLists.txt  NamedThread.cpp  NamedThread.h  StringHandler.cpp  StringHandler.h  ThreadPool.cpp  ThreadPool.h  Writer.h  bulk.cpp  bulk.h  consolewriter.cpp  consolewriter.h  main.cpp
Homework11/: Bulk.cpp  Bulk.h  CMakeLists.txt  Context.cpp  Context.h  StringHandler.cpp  StringHandler.h  Writer.h  async.cpp  async.h  main.cpp
Homework2/: .travis.yml  CMakeLists.txt  ip_filter.cpp  test.cpp  test_data.cpp  test_data.h
Homework3/: CMakeLists.txt  main.cpp  map_allocator.h  my_container.h
Homework4/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  check_type.h  cmake_install.cmake  main.cpp  print_ip  print_ip-0.0.18-Linux.deb  print_ip-0.0.33-Linux.deb  print_tuple.h  version.h
Homework4/html/: annotated.html  check__type_8h.html  check__type_8h__dep__incl.map  check__type_8h__dep__incl.md5  check__type_8h_source.html  classes.html  classis__container-members.html  classis__container.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  print__tuple_8h.html  print__tuple_8h__dep__incl.map  print__tuple_8h__dep__incl.md5  print__tuple_8h__incl.map  print__tuple_8h__incl.md5  print__tuple_8h_source.html  structiterate__tuple-members.html  structiterate__tuple.html  structiterate__tuple_3_01false_00_01index_00_01_printer_00_01_args_8_8_8_4-members.html  structiterate__tuple_3_01false_00_01index_00_01_printer_00_01_args_8_8_8_4.html  structiterate__tuple_3_01state_00_010_00_01_printer_00_01_args_8_8_8_4-members.html  structiterate__tuple_3_01state_00_010_00_01_printer_00_01_args_8_8_8_4.html  structprinter-members.html  structprinter.html  structt__printer-members.html  structt__printer.html  version_8h.html  version_8h_source.html
Homework4/latex/: annotated.tex  check__type_8h.tex  check__type_8h__dep__incl.md5  classis__container.tex  files.tex  main_8cpp.tex  main_8cpp__incl.md5  print__tuple_8h.tex  print__tuple_8h__dep__incl.md5  print__tuple_8h__incl.md5  refman.tex  structiterate__tuple.tex  structiterate__tuple_3_01false_00_01index_00_01_printer_00_01_args_8_8_8_4.tex  structiterate__tuple_3_01state_00_010_00_01_printer_00_01_args_8_8_8_4.tex  structprinter.tex  structt__printer.tex  version_8h.tex
Homework5/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  document.h  homework5-0.0.35-Linux.deb  homework5-0.0.36-Linux.deb  homework5-0.0.42-Linux.deb  install_manifest.txt  main.cpp  shape.h  version.h
Homework5/html/: annotated.html  class_circle-members.html  class_circle.html  class_command-members.html  class_command.html  class_command__coll__graph.map  class_command__coll__graph.md5  class_command__inherit__graph.map  class_command__inherit__graph.md5  class_create_document_command-members.html  class_create_document_command.html  class_create_document_command__coll__graph.map  class_create_document_command__coll__graph.md5  class_create_document_command__inherit__graph.map  class_create_document_command__inherit__graph.md5  class_create_shape_command-members.html  class_create_shape_command.html  class_create_shape_command__coll__graph.map  class_create_shape_command__coll__graph.md5  class_create_shape_command__inherit__graph.map  class_create_shape_command__inherit__graph.md5  class_delete_shape_command-members.html  class_delete_shape_command.html  class_delete_shape_command__coll__graph.map  class_delete_shape_command__coll__graph.md5  class_delete_shape_command__inherit__graph.map  class_delete_shape_command__inherit__graph.md5  class_document-members.html  class_document.html  class_graph_editor-members.html  class_graph_editor.html  class_open_document_command-members.html  class_open_document_command.html  class_open_document_command__coll__graph.map  class_open_document_command__coll__graph.md5  class_open_document_command__inherit__graph.map  class_open_document_command__inherit__graph.md5  class_rectangle-members.html  class_rectangle.html  class_save_as_document_command-members.html  (+46 more)
Homework5/latex/: annotated.tex  class_circle.tex  class_command.tex  class_command__coll__graph.md5  class_command__inherit__graph.md5  class_create_document_command.tex  class_create_document_command__coll__graph.md5  class_create_document_command__inherit__graph.md5  class_create_shape_command.tex  class_create_shape_command__coll__graph.md5  class_create_shape_command__inherit__graph.md5  class_delete_shape_command.tex  class_delete_shape_command__coll__graph.md5  class_delete_shape_command__inherit__graph.md5  class_document.tex  class_graph_editor.tex  class_open_document_command.tex  class_open_document_command__coll__graph.md5  class_open_document_command__inherit__graph.md5  class_rectangle.tex  class_save_as_document_command.tex  class_save_as_document_command__coll__graph.md5  class_save_as_document_command__inherit__graph.md5  class_save_document_command.tex  class_save_document_command__coll__graph.md5  class_save_document_command__inherit__graph.md5  class_shape.tex  class_shape__inherit__graph.md5  (+12 more)
Homework6/: CMakeLists.txt  container.h  generate_tuple.h  main.cpp  matrix.h  matrix_element.h  tuple_forward.h
Homework7/: Bulk.cpp  Bulk.h  CMakeLists.txt  StringHandler.cpp  StringHandler.h  bulk.cpp  bulk.h  consolewriter.cpp  consolewriter.h  logwriter.cpp  logwriter.h  main.cpp
Lesson1/: .travis.yml  CMakeLists.txt  test_version.cpp
(+43 files in other folders)
